# ESP32S3StreamTest

./: QUICK_START.md  README_FREENOVE.md  SETUP_GUIDE.md  flash_and_monitor.sh  requirements.txt
main/: CMakeLists.txt  idf_component.yml  qrcode_demo_main.c
